@@ -1,18 +1,13 @@
-.*
-!.gitignore
-Name.*
-!Name.xs
-Makefile*
-!Makefile.PL
-META.yml
-MYMETA.yml
-MYMETA.json
-blib
-build
-inc
-pm_to_blib
-MANIFEST*
-!MANIFEST.SKIP
-Debian*
-Sub-Name-*
-*.bs
+/.ackrc
+/.build/
+!/.gitignore
+/.latest
+/Name.*
+!/Name.xs
+/MYMETA.*
+/Makefile
+/Makefile.old
+/blib/
+/pm_to_blib
+/Sub-Name-*/
+/Sub-Name-*.tar.gz
