@@ -1,9 +1,0 @@
-#!include_default
-^\.
-build\b
-blib\b
-\.(?:bak|o|c|bs)$
-^Makefile$
-^Makefile.old$
-^Debian
-^Sub-Name-
