@@ -1,0 +1,13 @@
+name = Sub-Name
+author  = Matthijs van Duin <xmath@cpan.org>
+license = Perl_5
+copyright_holder = Matthijs van Duin
+copyright_year = 2004
+
+[@Author::ETHER]
+:version = 0.065
+installer = MakeMaker
+Authority.authority = cpan:FLORA
+Test::MinimumVersion.max_target_perl = 5.006
+Git::GatherDir.exclude_filename = Makefile.PL
+-remove = Test::PodSpelling     ; TODO
