@@ -1,4 +1,7 @@
-Revision history for Sub-Name
+Revision history for {{$dist->name}}
+
+{{$NEXT}}
+    - converted distribution packaging to Dist::Zilla
 
 0.09 -- 2014-08-09
     - Copy the contents of the %DB::sub entry if it exists; fixes
